# facet

./: CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  database.py  diagnostics.py  facet.py  install.sh  pyproject.toml  requirements.txt  scoring_config.json  tag_existing.py
.claude/: todos.md
.claude/skills/effect-safety-validator/: SKILL.md
.claude/skills/effect-safety-validator/references/: angular20-migration.md
.github/workflows/: ci.yml
analyzers/: auto_album.py  capsule_generator.py
api/: __init__.py  auth.py  config.py  db_helpers.py  raw_processing.py  similarity_groups.py  types.py
api/routers/: albums.py  auth.py  burst_culling.py  capsules.py  caption.py  comparison.py  critique.py  faces.py  filter_options.py  folders.py  gallery.py  health.py  map.py  memories.py  persons.py  plugins.py  scan.py  search.py  stats.py  thumbnails.py  timeline.py
client/: .gitignore  angular.json  eslint.config.js  package-lock.json  package.json
client/src/: styles.scss
client/src/app/: app.config.ts  app.html  app.routes.ts  app.spec.ts  app.ts
client/src/app/core/services/: album.service.spec.ts  album.service.ts  auth.service.ts  photo-actions.service.ts  scan.service.spec.ts  scan.service.ts  theme.service.spec.ts  theme.service.ts
client/src/app/features/albums/: albums-filters.service.spec.ts  albums-filters.service.ts  albums.component.ts  auto-album-settings-dialog.component.spec.ts  auto-album-settings-dialog.component.ts  create-album-dialog.component.ts  edit-album-dialog.component.spec.ts  edit-album-dialog.component.ts  save-smart-album-dialog.component.ts
client/src/app/features/capsules/: capsule-filters.service.spec.ts  capsules.component.ts
client/src/app/features/comparison/: comparison-ab-tab.component.spec.ts  comparison-ab-tab.component.ts  comparison-weights-tab.component.ts  comparison.component.spec.ts  comparison.component.ts
client/src/app/features/folders/: folders.component.spec.ts  folders.component.ts
client/src/app/features/gallery/: burst-culling.component.spec.ts  burst-culling.component.ts  face-selector-dialog.component.ts  gallery-filter-sidebar.component.spec.ts  gallery-filter-sidebar.component.ts  gallery.component.spec.ts  gallery.component.ts  gallery.store.spec.ts  gallery.store.ts  gps-filter-map-dialog.component.spec.ts  gps-filter-map-dialog.component.ts  memories-dialog.component.spec.ts  memories-dialog.component.ts  person-selector-dialog.component.ts  photo-critique-dialog.component.ts  photo-tooltip.component.spec.ts  photo-tooltip.component.ts  slideshow.component.spec.ts  slideshow.component.ts
client/src/app/features/map/: map-filters.service.ts  map.component.spec.ts  map.component.ts
client/src/app/features/persons/: manage-persons.component.spec.ts  manage-persons.component.ts  person-page.component.ts  persons-filters.service.ts
client/src/app/features/photo-detail/: caption-edit-dialog.component.spec.ts  caption-edit-dialog.component.ts  gps-edit-dialog.component.ts  photo-detail.component.spec.ts  photo-detail.component.ts
client/src/app/features/stats/: gear-chart-card.component.ts  stats-correlations-tab.component.ts  stats-timeline-tab.component.ts  stats.component.spec.ts  stats.component.ts
client/src/app/features/timeline/: timeline-date.pipe.spec.ts  timeline-date.pipe.ts  timeline-days.component.spec.ts  timeline-days.component.ts  timeline-filters.service.ts  timeline-months.component.spec.ts  timeline-months.component.ts  timeline-years.component.spec.ts  timeline.component.spec.ts  timeline.component.ts
client/src/app/shared/: leaflet.ts
client/src/app/shared/components/confirm-dialog/: confirm-dialog.component.ts
client/src/app/shared/components/person-card/: person-card.component.spec.ts  person-card.component.ts
client/src/app/shared/components/photo-card/: photo-card.component.spec.ts  photo-card.component.ts
client/src/app/shared/components/share-dialog/: share-dialog.component.spec.ts  share-dialog.component.ts
client/src/app/shared/components/shared-view/: shared-photo-detail.component.ts  shared-view.component.spec.ts  shared-view.component.ts
client/src/app/shared/directives/: infinite-scroll.directive.spec.ts  infinite-scroll.directive.ts  photo-detail-base.directive.ts
client/src/app/shared/models/: download.model.ts  filter-def.model.ts  photo.model.ts
client/src/app/shared/pipes/: filter-display.pipe.ts  sort-group-key.pipe.spec.ts  sort-group-key.pipe.ts  sort-persons.pipe.spec.ts  sort-persons.pipe.ts  translate.pipe.spec.ts  translate.pipe.ts
client/src/app/shared/utils/: download.ts  media-query.ts  range-filter.ts
config/: category_filter.py  scoring_config.py
db/: __init__.py  connection.py  fts.py  schema.py  vec.py
docs/: COMMANDS.md  CONFIGURATION.md  FACE_RECOGNITION.md  INSTALLATION.md  README.md  SCORING.md  VIEWER.md
exiftool/: exiftool_batch.py
faces/: merge_analyzer.py
i18n/translations/: de.json  en.json  es.json  fr.json  it.json
models/: model_manager.py  saliency_scorer.py  tagger.py  vlm_tagger.py
plugins/: __init__.py
processing/: batch_processor.py  multi_pass.py  scorer.py
tests/: conftest.py  test_albums.py  test_auth.py  test_auto_album.py  test_capsules.py  test_caption.py  test_config.py  test_critique.py  test_diagnostics.py  test_faces.py  test_filter_options.py  test_folders.py  test_gallery.py  test_map.py  test_memories.py  test_persons.py  test_refactor_round2.py  test_scan.py  test_search.py  test_similarity_groups.py  test_storage.py  test_timeline.py
utils/: burst.py  date_utils.py  duplicate.py  embedding.py  image_loading.py  union_find.py
